Edited the code to make links open in new tabs.
Through struggle, we perserved.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </section>
         <section class="links">
 		<u><b><h2>Communities</h2></b></u>
-            <a href="https://www.facebook.com/groups/redpillcrusaders">RPC FB Group</a>
-			<a href="https://parler.com/profile/RedPillCrusaders">RPC Parler Account</a>
-			<a href="https://www.reddit.com/r/RedPillCrusaders/">/r/redpillcrusaders</a>
-			<a href="https://discord.gg/P2jhvqMq5E">RPC Discord Hub</a>
+            <a href="https://www.facebook.com/groups/redpillcrusaders" target="_blank" rel="noopener noreferrer">>RPC FB Group</a>
+			<a href="https://parler.com/profile/RedPillCrusaders" target="_blank" rel="noopener noreferrer">>RPC Parler Account</a>
+			<a href="https://www.reddit.com/r/RedPillCrusaders/" target="_blank" rel="noopener noreferrer">>/r/redpillcrusaders</a>
+			<a href="https://discord.gg/P2jhvqMq5E" target="_blank" rel="noopener noreferrer">>RPC Discord Hub</a>
         </section>
     </div>
     <footer>
