--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </div>
     <footer>
-		<a href="/SCOTUS_Statement.html" target="_blank" rel="noopener noreferrer">Texas VS SCOTUS Statement</a>
+		<a href="SCOTUS_Statement.html" target="_blank" rel="noopener noreferrer">Texas VS SCOTUS Statement</a>
     </footer>
 </body>
 </html>
