--- a/SCOTUS_Statement.html
+++ b/SCOTUS_Statement.html
@@ -29,6 +29,8 @@
         <section class="links">
 		<u><b><h2>SCOTUS Statement</h2></b></u>
 		<p>Please stay calm. <b>Do not</b> freak out. There still things that can be done to change this.</p>
+		
+		<a href="https://red-pill-crusaders.github.io/redpillcrusaders/">HOME</a>
             
         </section>
     </div>
