--- a/SCOTUS_Memo.html
+++ b/SCOTUS_Memo.html
@@ -12,7 +12,7 @@
 		<meta name="language" content="ES">
 		<meta name="revised" content="Friday, December 11th, 2020, 8:48 am" />
 		<meta name="distribution" content="Global">
-		<title>Statement Regarding SCOTUS</title>
+		<title>Memo Regarding SCOTUS</title>
 		<link rel="stylesheet" href="assets/css/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet">
@@ -27,7 +27,7 @@
             <i><h2>Through struggle, we persevered.</h2></i>
         </section>
         <section class="links">
-		<u><b><h2>Memo Regarding SCOTUS</h2></b></u>
+		<u><b><h2>Memo About SCOTUS</h2></b></u>
 		<p>Please stay calm. <b>Do not</b> freak out. There are still things that can be done to change this. Even if not, we will be okay.</p>
 		<hr>
 		<a href="https://red-pill-crusaders.github.io/redpillcrusaders/"><h1><b>HOME</b></h1></a>
