--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </div>
     <footer>
-		<a href="SCOTUS_Statement.html" alt="Statement regarding the SCOTUS ruling">Texas VS SCOTUS Statement</a>
+		<a href="SCOTUS_Memo.html" alt="Statement regarding the SCOTUS ruling">Memo Regarding Texas VS SCOTUS</a>
     </footer>
 </body>
 </html>
