Changed main.css and index.html
index.html change log.
- Removed community link as they are now in the navbar.
- Replaced the community statement with the RPC copyright as it is now in the navbar within announcements.

main.css change log
- changed font size in footer from 25px to 19px.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
             <i><h2>Through struggle, we persevered.</h2></i>
         </section>
         <section class="links">
-		<u><b><h2>Communities</h2></b></u>
-            <a href="https://www.facebook.com/groups/redpillcrusaders" target="_blank" rel="noopener noreferrer">>RPC FB Group</a>
-			<a href="https://parler.com/profile/RedPillCrusaders" target="_blank" rel="noopener noreferrer">>RPC Parler Account</a>
-			<a href="https://www.reddit.com/r/RedPillCrusaders/" target="_blank" rel="noopener noreferrer">>/r/redpillcrusaders</a>
-			<a href="https://discord.gg/P2jhvqMq5E" target="_blank" rel="noopener noreferrer">>RPC Discord Hub</a>
-        </section>
     </div>
     <footer>
-		<a href="SCOTUS_Memo.html" alt="Statement regarding the SCOTUS ruling">Memo Regarding Texas VS SCOTUS</a>
+		<a href="SCOTUS_Memo.html" alt="Copyright 2020">Red Pill Crusaders &copy; 2020</a>
     </footer>
 </body>
 </html>
