--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
         <section class="links">
     </div>
     <footer>
-		<a href="SCOTUS_Memo.html" alt="Copyright 2020">Red Pill Crusaders &copy; 2020</a>
+		Red Pill Crusaders &copy; 2020
     </footer>
 </body>
 </html>
