--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
         </section>
         <section class="info">
             <b><h1 class="name">Red Pill Crusaders</h1></b>
-            <i><h2>Through struggle, we persevered.</h2></i>
+            <i><b><h2>Through struggle, we persevered.</h2></b></i>
         </section>
         <section class="links">
     </div>
