--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 <script>
 function openMenu() {  var navMain = document.getElementById('navMenuId');  if (navMain.className=== 'navMenu') {    navMain.className += ' mobileView';  } else {    navMain.className = 'navMenu';  }}
 </script>
-<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Communities<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://www.facebook.com/redpillcrusaders/'>Facebook Group</a><a href='https://parler.com/profile/RedPillCrusaders/'>RPC Parler</a><a href='https://www.reddit.com/r/RedPillCrusaders/'>RPC Sub-Reddit</a><a href='https://discord.gg/P2jhvqMq5E'>RPC Discord Hub</a></div></div><a href='https://www.facebook.com/groups/redpillcrusaders/' class='main_links'>Facebook Group</a><a href='https://red-pill-crusaders.github.io/redpillcrusaders/SCOTUS_Memo.html' class='main_links'>RPC Announcements</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
+<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Communities<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://www.facebook.com/redpillcrusaders/'>RPC News</a><a href='https://parler.com/profile/RedPillCrusaders/'>RPC Parler</a><a href='https://www.reddit.com/r/RedPillCrusaders/'>RPC Sub-Reddit</a><a href='https://t.me/joinchat/FOcEgHc6qTHliszI'>RPC on Telegram</a></div></div><a href='https://gab.com/groups/7813' class='main_links'>Gab Group</a><a href='https://red-pill-crusaders.github.io/redpillcrusaders/SCOTUS_Memo.html' class='main_links'>RPC Announcements</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
         <div class="main">
 		<section class="photo">
             <img src="assets/img/RPillLogo.png" alt="Photo">
         </section>
         <section class="info">
             <b><h1 class="name">Red Pill Crusaders</h1></b>
-            <i><b><h2>Through struggle, we persevered.</h2></b></i>
+            <i><b><h2>Through Struggle, We Persevered.</h2></b></i>
         </section>
         <section class="links">
     </div>
     <footer>
-		Red Pill Crusaders &copy; 2020
+		Red Pill Crusaders &copy; 2021
     </footer>
 </body>
 </html>
