Removed outdated statments and updated "index.html'
~Updated communities and certain links within index.html.
-Removed SCOTUS_Memo.html
-Removed SCOUTUS_Statement.html.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="description" content= "The Red Pill Crusaders is a movement/community across multiple platforms that focuses on news, the creation and distribution of memes and red pill truths." />
 		<meta name="robots" content= "index, follow">
-		<meta name="keywords" content="RPC, Red Pill, Trump, America is Great Again, Red Pill Crusaders, RPC News"/>
+		<meta name="keywords" content="RPC, Red Pill, Trump, America Was Great, Red Pill Crusaders, RPC News, MAGA"/>
 		<meta name="subject" content="Conservatism">
 		<meta name="copyright" content="Red Pill Crusaders">
 		<meta name="language" content="ES">
-		<meta name="revised" content="Friday, December 11th, 2020, 8:48 am" />
+		<meta name="revised" content="Friday, July 16th, 2021, 2:36 am" />
 		<meta name="distribution" content="Global">
 		<title>Red Pill Crusaders</title>
 		<link rel="stylesheet" href="assets/css/main.css">
@@ -24,7 +24,7 @@
 <script>
 function openMenu() {  var navMain = document.getElementById('navMenuId');  if (navMain.className=== 'navMenu') {    navMain.className += ' mobileView';  } else {    navMain.className = 'navMenu';  }}
 </script>
-<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Communities<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://sharfly.com/theredpillcrusaders/'>SharFly Group</a><a href='https://parler.com/profile/RedPillCrusaders/'>Parler [N/A]</a><a href='https://www.reddit.com/r/RedPillCrusaders/'>Sub-Reddit [N/A]</a><a href='https://t.me/joinchat/FOcEgHc6qTHliszI'>Join us at Telegram</a></div></div><a href='https://gab.com/groups/7813' class='main_links'>Gab Group</a><a href='https://gab.com/RedPillCrusaders/posts/105525408509280934' class='main_links'>RPC Announcement</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
+<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Communities<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://sharfly.com/theredpillcrusaders/'>SharFly Group</a><a href='https://parler.com/profile/RedPillCrusaders/'>Parler</a><a href='https://gab.com/groups/7813'>Gab</a><a href='https://t.me/joinchat/FOcEgHc6qTHliszI'>Join us at Telegram</a></div></div><a href='https://www.facebook.com/groups/redpillcrusaders/' class='main_links'>Facebook Group</a><a href='https://www.facebook.com/RedPillCrusaders/' class='main_links'>RPC News</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
         <div class="main">
 		<section class="photo">
             <img src="assets/img/RPillLogo.png" alt="Photo">
