--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
         </section>
         <section class="info">
             <b><h1 class="name">Red Pill Crusaders</h1></b>
-            <i><b><h2>Through Struggle, We Persevered.</h2></b></i>
+            <i><b><h2>Through Struggle, We Persevered.</h2></b></i><hr>
+				<br><p>We accept most ideologies into our community from both the left and right<br> as long as they agree that all humans matter.</p>
         </section>
         <section class="links">
     </div>
     <footer>
-		Red Pill Crusaders &copy; 2021
+		Red Pill Crusaders &copy; 2020-2021
     </footer>
 </body>
 </html>
