--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content= "The Red Pill Crusaders is a movement/community across multiple platforms that focuses on news, the creation and distribution of memes and red pill truths." />
+		<meta name="description" content= "The Red Pill Crusaders is a community that spans across multiple platforms that focuses on discussing the news, the creation and distribution of memes, along with a large number of other things." />
 		<meta name="robots" content= "index, follow">
 		<meta name="keywords" content="RPC, Red Pill, Trump, America Was Great, Red Pill Crusaders, RPC News, MAGA"/>
 		<meta name="subject" content="Conservatism">
@@ -24,7 +24,7 @@
 <script>
 function openMenu() {  var navMain = document.getElementById('navMenuId');  if (navMain.className=== 'navMenu') {    navMain.className += ' mobileView';  } else {    navMain.className = 'navMenu';  }}
 </script>
-<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Communities<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://sharfly.com/theredpillcrusaders/'>SharFly Group</a><a href='https://parler.com/profile/RedPillCrusaders/'>Parler</a><a href='https://gab.com/groups/7813'>Gab</a><a href='https://t.me/joinchat/FOcEgHc6qTHliszI'>Join us at Telegram</a></div></div><a href='https://www.facebook.com/groups/redpillcrusaders/' class='main_links'>Facebook Group</a><a href='https://www.facebook.com/RedPillCrusaders/' class='main_links'>RPC News</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
+<div class='navMenu' id='navMenuId'><a href='https://red-pill-crusaders.github.io/redpillcrusaders/' class='main_links'>Home</a><div class='dropdown'><button class='dropbtn'>Community<i class='fa fa-caret-down'>&#9660;</i></button><div class='dropdown-content'><a href='https://sharfly.com/theredpillcrusaders/'>SharFly Group</a><a href='https://parler.com/profile/RedPillCrusaders/'>Parler</a><a href='https://gab.com/groups/7813'>Gab</a><a href='https://t.me/joinchat/FOcEgHc6qTHliszI'>Join us at Telegram</a></div></div><a href='https://www.facebook.com/groups/redpillcrusaders/' class='main_links'>Facebook Group</a><a href='https://www.facebook.com/RedPillCrusaders/' class='main_links'>RPC News</a><a class='icon' href='javascript:void(0);' onclick='openMenu()'>&#9776;</a></div>
         <div class="main">
 		<section class="photo">
             <img src="assets/img/RPillLogo.png" alt="Photo">
@@ -33,6 +33,7 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
             <b><h1 class="name">Red Pill Crusaders</h1></b>
             <i><b><h2>Through Struggle, We Persevered.</h2></b></i><hr>
 				<br><p>We accept most ideologies into our community from both the left and right<br> as long as they agree that all humans matter.</p>
+				<center><button class="Button_To_Statements" type="button"><a href="statements.html">Statements</a></button></center>
         </section>
         <section class="links">
     </div>
