Updated index.html and main.css
Added button for future statements.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
         <section class="info">
             <b><h1 class="name">Red Pill Crusaders</h1></b>
             <i><b><h2>Through Struggle, We Persevered.</h2></b></i><hr>
-				<br><p>We accept most ideologies into our community from both the left and right<br> as long as they agree that all humans matter.</p>
-				<center><button class="Button_To_Statements" type="button"><a href="statements.html">Statements</a></button></center>
+				<br><p>We accept most ideologies into our community from both the left and right<br> as long as they agree that all humans matter.</p><br>
+					<a class="Button_To_Statements" href="statements.html">Statements</a>
         </section>
-        <section class="links">
     </div>
     <footer>
 		Red Pill Crusaders &copy; 2020-2021
